[package]
name = "tiny-ss"
version = "0.1.0"
authors = ["Kazuaki Ishiguro <kazuakiishiguro@protonmail.com>"]
edition = "2021"

[dependencies]
num-bigint = {version = "0.2.6", features = ["rand"]}
num-traits = "0.2.14"
rand = "0.6"

[dev-dependencies]
secp256k1 = {vresion = "0.17.2", features = ["rand-std"]}
