[package]
name = "tiny-ss"
version = "0.1.0"
authors = ["Kazuaki Ishiguro <kazuakiishiguro@protonmail.com>"]
edition = "2021"

[dependencies]
num-bigint = { version = "0.4.3" , default-features = false, features = ["rand"] }
num-traits = { version = "0.2.15", default-features = false }
rand = { version = "0.8.5" }

[dev-dependencies]
secp256k1 = {vresion = "0.17.2", features = ["rand-std"]}
